# webscrapping-contabilidade-redes-sociais

./: .gitignore  README.md  comentarios_youtube.csv  dados_twitter.csv  dados_video_youtube.csv  planejamento.md  pyproject.toml
src/: main.py
src/extraction/: __init__.py  __main__.py  x_extraction.py  youtube_extraction.py
src/loading/: __init__.py  __main__.py  csv_loader.py
src/transformation/: __init__.py  __main__.py  text_transformation.py
src/utils/: __init__.py  __main__.py  config.py
